--- a/JavaScript---Document.createElement----1/index.html
+++ b/JavaScript---Document.createElement----1/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <!--defer - script that will not run until after the page has loaded:-->
     <!--async - script is executed asynchronously with the rest of the page (the script will be executed while the page continues the parsing)-->
-    <script defer src="./javascript/htmlelements.js"></script>
+    <script defer src="./js/htmlelements.js"></script>
     </script>
 </head>
 
