--- a/JS-Document.createElement()-#1/index.html
+++ b/JS-Document.createElement()-#1/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Constructive &amp; Co.</title>
-    <link rel="stylesheet" href="css/c01.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document.createElement()</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <!--defer - script that will not run until after the page has loaded:-->
+    <!--async - script is executed asynchronously with the rest of the page (the script will be executed while the page continues the parsing)-->
+    <script defer src="./js/htmlelements.js"></script>
+    </script>
 </head>
+
 <body>
-  <h1>Constructive &amp; Co.</h1>
-  <script>document.write('<h3>Welcome! </h3>')</script>
-  <script src="js/add-content.js"></script>
-  <p>For all orders and inquiries please call <em>555-3344</em></p> 
+
+
+
+
+
+
+
 </body>
+
 </html>
-
-
