--- a/JS-onclick=myFunction()-#1/index.html
+++ b/JS-onclick=myFunction()-#1/index.html
@@ -15,6 +15,124 @@
 
 <body>
 
+    <div class="container-fluid">
+        <nav class="navbar">
+            <!--LOGO-->
+            <div class="navbar-brand">
+                <a class="" href="#"><img class="navbar-brand__logo" src="https://cdn.sukhi222.org/images/logo/international/logo.png" alt=""></a>
+            </div>
+            <!--MOBILE MENU TOGGLE BUTTON-->
+                <div class=" navbar-mobile-button">
+                    <label class="switch">
+                        <input type="checkbox" onclick="navMobileMenuTotggle()">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+            <!--NAVIGATION MENU-->
+            
+            <div class="navbar-menu navbar-collapse" id="navbar-menuu">
+                <ul class="navbar-menu__list">
+                    <!--HOME-->
+                    <li class="nav-item">
+                        <a  aria-current="page" href="#">HOME</a>
+                    </li>
+                    <!--ABOUT-->
+                    <li class="nav-item dropdown">
+                        <a   class=" dropdown-toggle" href="#" data-toggle="dropdown">ABOUT <span class="drop-icon">▾</span></a>
+                        <ul class="dropdown-menu">
+                            <!--ABOUT WHO WE ARE-->  
+                            <li class="nav-item">
+                                <a href="#" class=" dropdown-submenu-toggle">WHO WE ARE <span class="drop-icon">▾</span></a>
+                                <ul class="dropdown-submenu">
+                                    <li class="nav-item nav-submenu-item "><a href=""> PURPOSE STATEMENT</a></li>
+                                    <li class="nav-item nav-submenu-item"><a href=""> SUKHI 222</a></li>
+                                </ul>
+                            </li>
+                            <!--ABOUT WHAT WE DO-->    
+                            <!--
+                            <li class="nav-item">
+                                <a href="#" class=" dropdown-submenu-toggle">WHAT WE DO <span class="drop-icon">▾</span></a>
+                                <ul class="dropdown-submenu">
+                                    <li class="nav-item nav-submenu-item "><a href=""> page-example</a></li>
+                                </ul>
+                            </li>
+                            -->
+                            <!--ABOUT HOW WE WORK-->
+                            <!--
+                            <li class="nav-item ">
+                                <a href="#" class=" dropdown-submenu-toggle">HOW WE WORK <span class="drop-icon">▾</span></a>
+                                <ul class="dropdown-submenu">
+                                    <li class="nav-item nav-submenu-item "><a href=""> page-example</a></li>
+                                </ul>
+                            </li>
+                            -->
+                            <!--ABOUT WHY WE DO IT-->                           
+                            <!--
+                            <li class="nav-item">
+                                <a href="#" class=" dropdown-submenu-toggle">WHY WE DO IT <span class="drop-icon">▾</span></a>
+                                <ul class=" dropdown-submenu">
+                                    <li class="nav-item nav-submenu-item "><a href=""> page-example</a></li>
+                                </ul>
+                            </li>
+                            -->
+                            <!--ABOUT WHERE WE WORK-->
+                            <li class="nav-item ">
+                                <a href="#" class=" dropdown-submenu-toggle">WHERE WE WORK <span class="drop-icon">▾</span></a>
+                                <ul class="dropdown-submenu">
+                                    <li class="nav-item nav-submenu-item  "><a href=""> HEADQUARTERS</a></li>
+                                    <li class="nav-item nav-submenu-item "><a href=""> AUSTRALIA</a></li>
+                                    <li class="nav-item nav-submenu-item "><a href=""> CAMEROON</a></li>
+                                    <li class="nav-item nav-submenu-item "><a href=""> GHANA</a></li>
+                                </ul>
+                            </li>
+                           <!--ABOUT PROJECTS-->          
+                            <li class="nav-item">
+                                <a href="#" class=" dropdown-submenu-toggle">PROJECTS <span class="drop-icon">▾</span></a>
+                                <ul class=" dropdown-submenu">
+                                    <li class="nav-item nav-submenu-item "><a href=""> WATER</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <!--GET INVOLVED-->          
+                      <li class="nav-item dropdown">
+                        <a class=" dropdown-toggle" href="#" data-toggle="dropdown">GET INVOLVED <span class="drop-icon">▾</span></a>
+                       <!--
+                        <ul class="dropdown-menu">
+                          <li class="nav-item "><a  href="#">VOLUNTEERS</a></li>
+                          <li class="nav-item "><a  href="#">COLLABORATORS</a></li>
+                        </ul>
+                        -->
+                      </li>
+                      <!--FEED-->              
+                      <li class="nav-item dropdown">
+                        <a class=" dropdown-toggle" href="#" data-toggle="dropdown">FEED <span class="drop-icon">▾</span></a>
+                        <ul class="dropdown-menu">
+                          <li class="nav-item "><a href="#">NEWS</a></li>
+                          <!--
+                          <li class="nav-item "><a  href="#">Blog</a></li>
+                          -->
+                        </ul>
+                        
+                      </li>
+                     <!--GALLERY-->
+                      <li class="nav-item dropdown">
+                        <a class=" dropdown-toggle" href="#" data-toggle="dropdown">GALLERY <span class="drop-icon">▾</span></a>
+                        <ul class="dropdown-menu">
+                          <li class="nav-item "><a href="#">ART</a></li>
+                          <li class="nav-item "><a href="#">PROJECTS</a></li>
+                          <li class="nav-item "><a href="#">VIDEO</a></li>
+                        </ul>
+                      </li>
+                    <!--CONTACT-->
+                    <li class="nav-item">
+                        <a  href="#">CONTACT</a>
+                    </li>               
+                </ul>
+
+            </div>
+         </nav>
+   </div>
 
 
 
