--- a/JS-onclick=myFunction()-#2/index.html
+++ b/JS-onclick=myFunction()-#2/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="calculator">
                 <div class="calculator-header">
-                    <div class="calculator-header__screen">
+                    <div class="calculator-header__screen current-operand" data-operand >
                     </div>
                 </div>
                 <div class="calculator-body">
@@ -37,23 +37,25 @@
                     </div>
                 </div>
                 <div class="calculator-footer">
-                    <div class="calculator-footer__button"><button>7</button></div>
-                    <div class="calculator-footer__button"><button>8</button></div>
-                    <div class="calculator-footer__button"><button>9</button></div>
-                    <div class="calculator-footer__button"><button>/</button></div>
-                    <div class="calculator-footer__button"><button>4</button></div>
-                    <div class="calculator-footer__button"><button>5</button></div>
-                    <div class="calculator-footer__button"><button>6</button></div>
-                    <div class="calculator-footer__button"><button>X</button></div>
-                    <div class="calculator-footer__button"><button>1</button></div>
-                    <div class="calculator-footer__button"><button>2</button></div>
-                    <div class="calculator-footer__button"><button>3</button></div>
-                    <div class="calculator-footer__button"><button>+</button></div>
-                    <div class="calculator-footer__button"><button>0</button></div>
-                    <div class="calculator-footer__button"><button>.</button></div>
-                    <div class="calculator-footer__button"><button>=</button></div>
-                    <div class="calculator-footer__button"><button>-</button></div>
-                    
+                    <div class="calculator-footer__button"><button data-number>7</button></div>
+                    <div class="calculator-footer__button"><button data-number>8</button></div>
+                    <div class="calculator-footer__button"><button data-number>9</button></div>
+                    <div class="calculator-footer__button"><button data-operation>/</button></div>
+                    <div class="calculator-footer__button"><button data-number>4</button></div>
+                    <div class="calculator-footer__button"><button data-number>5</button></div>
+                    <div class="calculator-footer__button"><button data-number>6</button></div>
+                    <div class="calculator-footer__button"><button data-operation>X</button></div>
+                    <div class="calculator-footer__button"><button data-number>1</button></div>
+                    <div class="calculator-footer__button"><button data-number>2</button></div>
+                    <div class="calculator-footer__button"><button data-number>3</button></div>
+                    <div class="calculator-footer__button"><button data-operation>+</button></div>
+                    <div class="calculator-footer__button"><button data-number>0</button></div>
+                    <div class="calculator-footer__button"><button data-operation>.</button></div>
+                    <div class="calculator-footer__button"><button data-equals>=</button></div>
+                    <div class="calculator-footer__button"><button data-operation>-</button></div>
+                    <div class="calculator-footer__button"><button data-all-clear>AC</button></div>
+                    <div class="calculator-footer__button"><button data-delete>DEL</button></div>
+
                 </div>
             </div>
         </div>
