function data.map
~ inserted buttons using data.map function

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="./css/style.css">
     <!--defer - script that will not run until after the page has loaded:-->
     <!--async - script is executed asynchronously with the rest of the page (the script will be executed while the page continues the parsing)-->
-    <script defer src="./js/htmlelements.js"></script>
+    <script defer src="./js/app.js"></script>
     </script>
 </head>
 
 <body>
-
 
 
 
