--- a/JS-data.map()-#1/index.html
+++ b/JS-data.map()-#1/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document.createElement()</title>
+    <title>data.map()</title>
     <link rel="stylesheet" href="./css/style.css">
     <!--defer - script that will not run until after the page has loaded:-->
     <!--async - script is executed asynchronously with the rest of the page (the script will be executed while the page continues the parsing)-->
