.filter array method

--- a/JS-8 must know array methods -#1/index.html
+++ b/JS-8 must know array methods -#1/index.html
@@ -19,6 +19,13 @@
     <h1>.map</h1>
     <h3>Orignal</h3>
     <div class="container" id="original"></div>
+
+
+    <h1>.filter Method</h1>
+    <h3>Filtering numbers</h3>
+    <div class="container" id="filter-method"></div>
+
+
 </body>
 
 </html>
