--- a/JS-8 must know array methods -#1/index.html
+++ b/JS-8 must know array methods -#1/index.html
@@ -26,6 +26,10 @@
     <div class="container" id="filter-method"></div>
 
 
+    <h1>.find Method</h1>
+    <h3>Finding numbr</h3>
+    <div class="container" id="find-method"></div>
+
 </body>
 
 </html>
