--- a/JS-8 must know array methods -#1/index.html
+++ b/JS-8 must know array methods -#1/index.html
@@ -30,6 +30,10 @@
     <h3>Finding numbr</h3>
     <div class="container" id="find-method"></div>
 
+    <h1>.forEach Method</h1>
+    <h3>Finding numbr</h3>
+    <div class="container" id="forEach-method"></div>
+    
 </body>
 
 </html>
