--- a/JS-reverse-a-number-function/index.html
+++ b/JS-reverse-a-number-function/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>for loop</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <!--defer - script that will not run until after the page has loaded:-->
-    <!--async - script is executed asynchronously with the rest of the page (the script will be executed while the page continues the parsing)-->
-    <script defer src="./js/app.js"></script>
-    </script>
-    
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css"/>
+
 </head>
-
 <body>
-  
-</body>
+    <section class="section">
+        <div class="section-header">
+            <h1>Reverse object JS</h1>
+        </div>
+        <div class="section-body">
+            <form action="">
+                <label for="object" title="object">JavaScript function that reverse a number</label>
+                <textarea id="text-area" name="object-name" id="" cols="30" rows="1" value="Paul"></textarea>
+                <input type="button" value="RETURN" id="output-button"/>   
+                <div id="output"></div>
+            </form>
+        </div>
+    </section>
+    <script src="js/app.js"></script>
 
+</body>
 </html>
